--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ body {
     background-color: #f8f9fa; /* Off-white background */
     margin: 0;
     padding: 0;
+    color: #333; /* Dark text color */
 }
 
 .container {
@@ -35,6 +36,7 @@ select {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    color: #333; /* Dark text color */
 }
 
 button {
@@ -50,39 +52,31 @@ button:hover {
     background-color: #0056b3; /* Darker blue on hover */
 }
 
-
-
-
-
-
-
-
-
-
+/* Tooltips */
 .tooltip {
     position: relative;
     display: inline-block;
 }
 
 .tooltip .tooltiptext {
-visibility: hidden;
-width: 200px;
-background-color: #333333;
-color: #f8f8f8;
-font-size: 1.15rem;
-font-family: Arial, Helvetica, sans-serif;
-text-align: center;
-border-radius: 6px;
-padding: 15px;
+    visibility: hidden;
+    width: 200px;
+    background-color: #333; /* Dark tooltip background color */
+    color: #f8f8f8; /* Light tooltip text color */
+    font-size: 1.15rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    border-radius: 6px;
+    padding: 15px;
 
-/* Position the tooltip text */
-position: absolute;
-z-index: 1;
-top: 100%;
-left: 50%;
-margin-left: -100px;
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -100px;
 }
 
 .tooltip:hover .tooltiptext {
-visibility: visible;
+    visibility: visible;
 }
